# apioficialdeadsideftp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  montar_mapa_deadside.py  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0001_phase1_schema.py  0002_death_events_combat.py  0003_websocket_events.py
app/: __init__.py  cli.py  main.py
app/api/: dependencies.py
app/core/: config.py  cors.py  logging.py  middleware.py
app/db/: models.py  session.py
app/parsers/: __init__.py  base.py  character.py  deathlog.py  format_detector.py  json_helpers.py  permanent_character.py  registry.py  storage.py  vehicle.py
app/services/: combat.py  event_service.py  ftp.py  ingestion.py  map_service.py  (+1 more)
docs/: deathlog-format-findings.md  file-format-findings.md
scripts/: cors_test.html  seed.py
tests/: test_all_endpoints.py  test_character_parser.py  test_combat_api.py  test_combat_service.py  test_cors.py  test_death_ingestion.py  test_deathlog_parser.py  test_event_service.py  test_format_detector.py  test_ftp_integration.py  test_ingestion_events.py  test_ingestion_helpers.py  test_ingestion_transaction.py  test_json_ingestion.py  test_json_parsers.py  test_live_players.py  test_map_asset.py  test_map_service.py  test_montar_mapa.py  test_production.py  test_reference_archive.py  test_vehicle_parser.py  test_websocket_auth.py  test_websocket_ingestion_integration.py  test_websocket_manager.py  test_websocket_routes.py
web/: package-lock.json  package.json
(+22 files in other folders)
