[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "deadside-data-api"
version = "0.1.0"
description = "API assíncrona para importar e consultar dados persistentes do Deadside"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "pydantic==2.11.4",
  "pydantic-settings==2.9.1",
  "python-dotenv==1.1.0",
  "sqlalchemy[asyncio]==2.0.41",
  "asyncpg==0.30.0",
  "alembic==1.15.2",
  "aioftp==0.27.2",
]

[project.optional-dependencies]
test = ["httpx==0.28.1", "pytest==8.3.5", "pytest-asyncio==0.26.0", "pytest-cov==6.1.1", "aiosqlite==0.21.0", "Pillow==11.2.1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
